--- a/main.html
+++ b/main.html
@@ -10,19 +10,38 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<nav>
-		<h1>My Website</h1>
+<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About us</a></li>
-			<li><a href="#">Contact us</a></li>
+			<li>
+				<a href="https.//googleco.in">Home</a>
+			</li>
+			<li>
+				<a href="https.//googleco.in">About us</a>
+			</li>
+			<li>
+				<a href="https.//googleco.in">Contact us</a>
+			</li>
 		</ul>
 	</nav>
-	<h2>3 random videos</h2>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
-</body>
-
-
+		<h2>3 random videos</h2>
+		<ul>
+			<li>
+				<video controls >
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+				</video>
+			</li>
+			<li>
+				<video controls>
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+				</video>
+			</li>
+			<li>
+				<video controls>
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+				</video>
+			</li>
+		</ul>
+    
+	
+</body>	
 </html>
